limit-deny-all-traffic-demo/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-traffic
spec:
  podSelector:
    matchLabels:
      app: simplilearn
  ingress: []
