limit-deny-all-traffic-demo/limit-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-traffic
spec:
  podSelector:
    matchLabels:
      app: simplilearn
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: simplilearn
